[package]
name = "roxy"
version = "0.1.0"
edition = "2024"

[dependencies]
httparse = "1.10.1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.25"

# OpenTelemetry
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["trace"] }
opentelemetry-otlp = { version = "0.17", features = ["http-proto", "reqwest-blocking-client"] }
opentelemetry-semantic-conventions = "0.16"

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
